--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .description {
-    @apply leading-6 text-[16px] flex flex-col gap-6;
+    @apply leading-6 text-[16px];
 }
 
 .description > ul {
